--- a/example/index.html
+++ b/example/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>React LoadingSpinner Example</title>
+  <title>React Simple DatePicker Example</title>
 </head>
 <body>
   <div class="app"></div>
